--- a/src/components/LinkSection/LinkSection.css
+++ b/src/components/LinkSection/LinkSection.css
@@ -48,6 +48,10 @@
     font-family: Roboto,-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;
 }
 
+.second h6 {
+  font-weight: 400;
+}
+
 .links a:hover {
     color: #f68b1e;
 }
